# MediaRobot

./: .gitignore  MediaRobot.py  README.md  hash.py  prompts.py  pyproject.toml
.streamlit/: config.toml
components/: faq.py  sidebar.py
mediarobot/: openai_functions.py
mediarobot/authentication/: config.yaml
pages/: Register.py
static/: styles.css
